--- a/sjgamezone/index.html
+++ b/sjgamezone/index.html
@@ -26,3 +26,11 @@
   </p>
 </body>
 </html>
+<footer>
+  <p>
+    We know ads can be a bit annoying, but they are the only way we can keep SJ Game Zone running and bring you free games and content. Thank you for your understanding!
+  </p>
+  <p>
+    Some links may show a short ad before the official page. SJ Game Zone only shares legal, safe links.
+  </p>
+</footer>
